<resources>
    <string name="app_name">Eat Safe</string>
    <string name="titulo">Registro de usuarios</string>
    <string name="nombre_hint">Nombre</string>
    <string name="correo_hint">Correo</string>
    <string name="telefono_hint">Teléfono</string>
    <string name="passw_hint">Contraseña</string>
    <string name="rep_passw_hint">Repetir contraseña</string>
    <string name="nacimiento">Seleccione su fecha de nacimiento</string>
    <string name="registrar_button">Registrarse</string>
    <string name="nacimiento_text">Fecha de nacimiento</string>
    <string name="registrar_login">Registrarse</string>
    <string name="login_textview">Iniciar Sesión</string>
    <string name="mail_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="login_content">login image</string>
    <string name="cerrrar_sesion">Cerrar sesión</string>
    <string name="eatsafe">Eat Safe</string>

    <string name="nombre_vacio">Ingrese su nombre!</string>
    <string name="telefono_vacio">Ingrese su teléfono!</string>
    <string name="mail_vacio">Ingrese su correo!</string>
    <string name="password_vacio">Ingrese su contraseña!</string>
    <string name="repassword_vacio">Repita su contraseña!</string>
    <string name="min_password">Su contraseña debe de tener como mínimo 6 dígitos!</string>
    <string name="nomatch_password">Contraseñas no coinciden!</string>
    <string name="fecha_vacio">Ingrese su fecha de nacimiento!</string>
    <string name="exitoso">Registro exitoso!</string>
    <string name="bienvenido">BIENVENIDO!</string>
    <string name="incorrecta">Contraseña incorrecta!</string>
    <string name="noexiste">Usuario no existe!</string>
    <string name="main">Correo con el que se inició sesión: %s</string>


    <string-array name="ciudades">
        <item>Seleccione ciudad</item>
        <item>Medellín</item>
        <item>Bogotá</item>
        <item>Barranquilla</item>
        <item>Bucaramanga</item>
    </string-array>

    <string name="escanear">Escanear</string>
    <string name="confirmar">Confirmar</string>
    <string name="menu">Menú</string>
    <string name="mas">Más</string>

    <string name="escanear_descripcion">Escanear\nEn este fragmento se accederá a la cámara del celular con el objetivo de escanear el código QR identificador de cada restaurante, aquí también se mostrará la información básica del restaurante para que el usuario compruebe su identidad</string>
    <string name="menu_descripcion">Menú\nAquí se mostrará la carta del restaurante, este fragmento estará acompañado de un TabbedActivity que mostrará al usuario las diferentes categorías de productos que se venden en el restaurante, dando la opción de indicar cuales quiere pedir</string>
    <string name="confirmar_descripcion">Confirmar\nEn esta vista se le mostrará al usuario un resumen de los productos pedidos u orden con el fin de que verifique si es correcta; si le falta algo más por pedir o si hay algún producto que no pidió, también se le dará la opción de dar indicaciones o detalles específicos sobre cómo quiere que se le prepare un determinado producto</string>
    <string name="mas_descripcion">Más\nEn esta sección se le mostrará al usuario opciones como cerrar sesión, modificar datos de usuario tales como contraseña, correo y fecha de nacimiento; también se le mostrará detalles técnicos de la aplicación, versión, políticas de servicio, etc.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>