<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_escanear"
            android:icon="@drawable/ic_menu_escanear"
            android:title="@string/escanear" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu_menu"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_confirmar"
            android:icon="@drawable/ic_menu_confirmar"
            android:title="@string/confirmar" />
        <item
            android:id="@+id/nav_mas"
            android:icon="@drawable/ic_menu_mas"
            android:title="@string/mas" />
    </group>
</menu>